--- a/student/student-dashboard.html
+++ b/student/student-dashboard.html
@@ -39,7 +39,10 @@
     <!-- Icons Css -->
     <link href="assets\css\icons.min.css" rel="stylesheet" type="text/css">
 
+    <!-- Flatpickr -->
+  <link type="text/css" href="assets\css\flatpickr.css" rel="stylesheet">
 
+  <link type="text/css" href="assets\css\flatpickr-airbnb.css" rel="stylesheet">
 
 
 
@@ -1546,6 +1549,27 @@
 </ul> -->
                     </div>
 
+                    <div class="page-separator">
+                        <div class="page-separator__text">Student passed charts</div>
+                      </div>
+                      <div class="card mb-lg-32pt">
+                          <div class="card-header d-flex align-items-center">
+                              <strong class="card-title">Revenue</strong>
+                              <div class="flatpickr-wrapper flatpickr-calendar-right d-flex ml-auto">
+                                  <div id="recent_orders_date" data-toggle="flatpickr" data-flatpickr-wrap="true" data-flatpickr-static="true" data-flatpickr-mode="range" data-flatpickr-alt-format="d/m/Y" data-flatpickr-date-format="d/m/Y">
+                                      <a href="javascript:void(0)" class="link-date" data-toggle="">13/03/2018 to 20/03/2018</a>
+                                      <input class="d-none" type="hidden" value="13/03/2018 to 20/03/2018" data-input="">
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="card-body">
+                              <div class="chart-legend mt-0 mb-24pt justify-content-start" id="ordersChartLegend"></div>
+                              <div class="chart">
+                                  <canvas id="ordersChart" class="chart-canvas js-update-chart-bar" data-chart-legend="#ordersChartLegend" data-chart-prefix="$" data-chart-suffix="k" data-chart-line-background-color="gradient:primary"></canvas>
+                              </div>
+                          </div>
+                      </div>
+
                 </div>
             </div>
         </div>
@@ -2359,6 +2383,21 @@
     <!-- Tables -->
     <script src="assets\js\toggle-check-all.js"></script>
     <script src="assets\js\check-selected-row.js"></script>
+
+    <!-- Chart.js -->
+    <script src="assets\vendor\Chart.min.js"></script>
+
+    <!-- UI Charts Page JS -->
+    <script src="assets\js\chartjs-rounded-bar.js"></script>
+    <script src="assets\js\chartjs.js"></script>
+
+    <!-- Chart.js Samples -->
+    <script src="assets\js\page.instructor-dashboard.js"></script>
+
+    <!-- Chart.js Samples -->
+  <script src="assets\js\page.instructor-earnings.js"></script>
+
+
 
 </body>
 
