changes in student dashboard

--- a/main/student-dashboard.html
+++ b/main/student-dashboard.html
@@ -1550,7 +1550,7 @@
                     </div>
 
                     <div class="page-separator">
-                        <div class="page-separator__text">Student passed charts</div>
+                        <div class="page-separator__text">Attendance</div>
                       </div>
                       <div class="card mb-lg-32pt">
                           <div class="card-header d-flex align-items-center">
@@ -2392,10 +2392,10 @@
     <script src="assets\js\chartjs.js"></script>
 
     <!-- Chart.js Samples -->
-    <script src="assets\js\page.instructor-dashboard.js"></script>
+    <script src="assets\js\page.student-attendance.js"></script>
 
     <!-- Chart.js Samples -->
-  <script src="assets\js\page.instructor-earnings.js"></script>
+  <!-- <script src="assets\js\page.instructor-earnings.js"></script> -->
 
 
 
