updated links in students

--- a/main/student-check-result.html
+++ b/main/student-check-result.html
@@ -602,13 +602,13 @@
                     <div class="sidebar-heading">Account</div>
                     <ul class="sidebar-menu">
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="edit-account-profile.html">
+                            <a class="sidebar-menu-button" href="student-edit-account-profile.html">
                                 <!-- <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">school</span> -->
                                 <span class="sidebar-menu-text">Profile</span>
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="change-password.html">
+                            <a class="sidebar-menu-button" href="student-change-password.html">
                                 <!-- <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span> -->
                                 <span class="sidebar-menu-text">Change Password</span>
                             </a>
