updated links in students

--- a/main/student-timetable.html
+++ b/main/student-timetable.html
@@ -591,7 +591,7 @@
                     <div class="sidebar-heading">Account</div>
                     <ul class="sidebar-menu">
                         <li class="sidebar-menu-item">
-                            <a class="sidebar-menu-button" href="student-edit-account-profile.html">
+                            <a class="sidebar-menu-button" href="student-   edit-account-profile.html">
                                 <!-- <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">school</span> -->
                                 <span class="sidebar-menu-text">Profile</span>
                             </a>
