--- a/main/instructor-edit-course.html
+++ b/main/instructor-edit-course.html
@@ -297,9 +297,14 @@
                             <ol class="breadcrumb p-0 m-0">
                                 <li class="breadcrumb-item"><a href="instructor-dashboard.html">Home</a></li>
 
-                                <li class="breadcrumb-item active">
+                                <li class="breadcrumb-item "><a href="instructor-courses-category.html">
 
-                                    Edit Course
+                                    Courses
+
+                                </a></li>
+                                <li class="breadcrumb-item active ">
+
+                                    Edit Courses
 
                                 </li>
 
@@ -659,6 +664,12 @@
                             <a class="sidebar-menu-button" href="instructor-courses-category.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
                                 <span class="sidebar-menu-text">Course</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-time-off.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
+                                <span class="sidebar-menu-text">Time-off</span></span>
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
