--- a/main/instructor-edit-quiz.html
+++ b/main/instructor-edit-quiz.html
@@ -292,9 +292,14 @@
                             <ol class="breadcrumb p-0 m-0">
                                 <li class="breadcrumb-item"><a href="instructor-dashboard.html">Home</a></li>
 
-                                <li class="breadcrumb-item active">
+                                <li class="breadcrumb-item "><a href="instructor-quizzes.html">
 
-                                    Edit Quiz
+                                    Quizzes
+
+                                </a></li>
+                                <li class="breadcrumb-item active ">
+
+                                    Edit quizzes
 
                                 </li>
 
@@ -513,6 +518,23 @@
                     </div>
 
 
+
+                    <a href="index.html" class="sidebar-brand ">
+                        <!-- <img class="sidebar-brand-icon" src="assets/images/illustration/teacher/128/white.svg" alt="ILMS"> -->
+
+                        <span class="avatar avatar-xl sidebar-brand-icon h-auto">
+
+                            <span class="avatar-title rounded bg-primary"><img src="assets\images\illustration\teacher\128\white.svg" class="img-fluid" alt="logo"></span>
+
+                        </span>
+
+                        <span>ILMS</span>
+                    </a>
+
+
+
+
+
                     <div class="sidebar-heading">Instructor</div>
                     <ul class="sidebar-menu">
 
@@ -527,6 +549,12 @@
                             <a class="sidebar-menu-button" href="instructor-courses-category.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
                                 <span class="sidebar-menu-text">Course</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-time-off.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
+                                <span class="sidebar-menu-text">Time-off</span></span>
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
