--- a/main/instructor-time-table.html
+++ b/main/instructor-time-table.html
@@ -319,17 +319,10 @@
                                                   Friday <small>01/03/2019</small>
                                               </div>
                                           </th>
-                                          <th>
-                                              <div class="lh-1 d-flex flex-column text-50 my-4pt">
-                                                  Saturday <small>02/03/2019</small>
-                                              </div>
+
+                                          <th class="text-right">
+                                              <a href="" class="text-50"><i class="material-icons">more_vert</i></a>
                                           </th>
-                                          <th>
-                                              <div class="lh-1 d-flex flex-column text-50 my-4pt">
-                                                  Sunday <small>03/03/2019</small>
-                                              </div>
-                                          </th>
-                                          <th style="width: 24px;"></th>
                                       </tr>
                                   </thead>
                                   <tbody class="list" id="contacts"><tr>
@@ -343,7 +336,7 @@
                                                   <div class="media-body ml-4pt">
 
 
-                                                      <p class="mb-0"><strong style="font-size:14px;">Quantum Physics</strong></p>
+                                                      <p class="mb-0"><strong style="font-size:14px;">Data Structure and Algorithms</strong></p>
 
 
                                                   </div>
@@ -354,8 +347,8 @@
 
 
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 1st year</strong></small>
+                                                  <small class="text-black-50">8:00 am-9:00 am</small>
                                               </a>
 
 
@@ -364,8 +357,8 @@
 
 
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 1st year</strong></small>
+                                                  <small class="text-black-50">8:00 am-9:00 am</small>
                                               </a>
 
 
@@ -380,32 +373,13 @@
 
 
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 1st year</strong></small>
+                                                  <small class="text-black-50">8:00 am-9:00 am</small>
                                               </a>
 
 
                                           </td>
-                                          <td>
 
-
-                                              <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
-                                              </a>
-
-
-                                          </td>
-                                          <td>
-
-
-                                              <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
-                                              </a>
-
-
-                                          </td>
                                           <td class="text-right">
                                               <a href="" class="text-50"><i class="material-icons">more_vert</i></a>
                                           </td>
@@ -420,7 +394,7 @@
                                                   <div class="media-body ml-4pt">
 
 
-                                                      <p class="mb-0"><strong style="font-size:14px;">Linear Algebra</strong></p>
+                                                      <p class="mb-0"><strong style="font-size:14px;">Software Enginnering</strong></p>
 
 
                                                   </div>
@@ -437,26 +411,21 @@
 
 
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small class="text-black-50">10:00 am-11:00 am</small>
                                               </a>
 
 
                                           </td>
                                           <td>
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small class="text-black-50">10:00 am-11:00 am</small>
                                               </a>
                                           </td>
                                           <td>
                                           </td>
-                                          <td>
 
-                                          </td>
-                                          <td>
-
-                                          </td>
                                           <td class="text-right">
                                               <a href="" class="text-50"><i class="material-icons">more_vert</i></a>
                                           </td>
@@ -468,7 +437,7 @@
                                                   <div class="media-body ml-4pt">
 
 
-                                                      <p class="mb-0"style="width:50%;"><strong style="font-size:14px;">Chemical Structures & Reactivity</strong></p>
+                                                      <p class="mb-0"style="width:50%;"><strong style="font-size:14px;">Theory of Computaion</strong></p>
 
 
                                                   </div>
@@ -477,8 +446,8 @@
                                           </td>
                                           <td>
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small class="text-black-50">1:00 pm-2:00 pm</small>
                                               </a>
 
 
@@ -487,8 +456,8 @@
 
 
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small class="text-black-50">1:00 pm-2:00 pm</small>
                                               </a>
 
 
@@ -503,32 +472,13 @@
 
 
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small class="text-black-50">1:00 pm-2:00 pm</small>
                                               </a>
 
 
                                           </td>
-                                          <td>
 
-
-                                              <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
-                                              </a>
-
-
-                                          </td>
-                                          <td>
-
-
-                                              <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Night</strong></small>
-                                                  <small class="text-black-50">20:00 - 08:00</small>
-                                              </a>
-
-
-                                          </td>
                                           <td class="text-right">
                                               <a href="" class="text-50"><i class="material-icons">more_vert</i></a>
                                           </td>
@@ -536,7 +486,7 @@
                                           <td class="border-left-0">
                                               <div class="media flex-nowrap align-items-center" style="white-space: nowrap;">
                                                   <div class="media-body ml-4pt">
-                                                      <p class="mb-0"><strong style="font-size:15px;">C programming</strong></p>
+                                                      <p class="mb-0"><strong style="font-size:15px;">Network and Security</strong></p>
                                                   </div>
                                               </div>
                                           </td>
@@ -546,25 +496,20 @@
                                           </td>
                                           <td>
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 3rd year</strong></small>
+                                                  <small class="text-black-50">3:00 pm-4:00 pm</small>
                                               </a>
                                           </td>
                                           <td>
                                               <a class="d-flex flex-column border-1 rounded bg-light px-8pt py-4pt lh-1" href="">
-                                                  <small><strong class="js-lists-values-name text-black-100">Day</strong></small>
-                                                  <small class="text-black-50">07:30 - 20:00</small>
+                                                  <small><strong class="js-lists-values-name text-black-100">B.Tech 2nd year</strong></small>
+                                                  <small class="text-black-50">3:00 pm-4:00 pm</small>
                                               </a>
                                           </td>
                                           <td>
 
                                           </td>
-                                          <td>
 
-                                          </td>
-                                          <td>
-
-                                          </td>
                                           <td class="text-right">
                                               <a href="" class="text-50"><i class="material-icons">more_vert</i></a>
                                           </td>
@@ -648,6 +593,12 @@
                             <a class="sidebar-menu-button" href="instructor-courses-category.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
                                 <span class="sidebar-menu-text">Course</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-time-off.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
+                                <span class="sidebar-menu-text">Time-off</span></span>
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
