--- a/main/messages.html
+++ b/main/messages.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
@@ -372,6 +373,12 @@
                             <a class="sidebar-menu-button" href="instructor-courses-category.html">
                                 <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
                                 <span class="sidebar-menu-text">Course</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-menu-item">
+                            <a class="sidebar-menu-button" href="instructor-time-off.html">
+                                <span class="material-icons sidebar-menu-icon sidebar-menu-icon--left">import_contacts</span>
+                                <span class="sidebar-menu-text">Time-off</span></span>
                             </a>
                         </li>
                         <li class="sidebar-menu-item">
