asl;djf'la;sdkjf

--- a/main/instructor-profile.html
+++ b/main/instructor-profile.html
@@ -569,7 +569,7 @@
                         <div style="margin-top:20px;"class="card border-0 mb-lg-0">
                             <div style="background-image: url(assets/images/achievements/flinto.png);"class="card-header  align-items-center ">
                               <div style="text-align:center;"class="h5 text-white text-uppercase font-weight-normal m-0"><i class="fas fa-address-book"style="margin-right:5px;"></i> Connect</div>
-                              <div style="padding:10px 20px 10px 20px;"class="text-white d-block mb-24pt"style="margin-top:20px;text-align:left;">I have been  working as an online instructor over 10 years of experince and always interested to help my students. Here â€™s how to reach out and connect to me and have an experince to gain and share knowledge.</div>
+                              <div style="padding:10px 20px 10px 20px;"class="text-white d-block mb-24pt"style="margin-top:20px;text-align:left;">I have been  working as an online instructor over 10 years of experience and always interested to help my students. Here â€™s how to reach out and connect to me and have an experience to gain and share knowledge.</div>
                               <div style="text-align:center;"class="">
                                 <a href="" class="text-white fab fa-facebook-square font-size-32pt mr-8pt"></a>
                                 <a href="" class="text-white fab fa-linkedin font-size-32pt mr-8pt"></a>
@@ -764,8 +764,8 @@
                               </td>
                             </tr>
                             <tr>
-                              <td style="width:40%;padding:3px 0 12px 12px;border:0;font-size:13px;color:grey;font-style:italic;">
-                                <i class="fas fa-arrow-right"style="margin-right:2px;"></i>Experince of 3 years in advance reseach in computaional network
+                              <td style="width:40%;padding:3px 0 20px 12px;border:0;font-size:13px;color:grey;font-style:italic;">
+                                <i class="fas fa-arrow-right"style="margin-right:2px;"></i>Experience of 3 years in advance reseach in computaional network
                               </td>
                               <td style="width:50%;padding:3px 0 12px 12px;border:none;"></td>
                             </tr>
@@ -806,7 +806,7 @@
 
                             </tr>
                             <tr>
-                              <td style="width:40%;padding:3px 0 12px 12px;border:0;font-size:13px;color:grey;font-style:italic;">
+                              <td style="width:40%;padding:3px 0 20px 12px;border:0;font-size:13px;color:grey;font-style:italic;">
                                 <i class="fas fa-arrow-right"style="margin-right:2px;"></i>Honoured for the reseach in bit computing
                               </td>
                               <td style="width:50%;padding:3px 0 12px 12px;border:none;"></td>
@@ -850,8 +850,8 @@
 
                             </tr>
                             <tr>
-                              <td style="width:40%;padding:3px 0 12px 12px;border:0;font-size:13px;color:grey;font-style:italic;">
-                                <i class="fas fa-arrow-right"style="margin-right:2px;"></i>Experince of developing real-time softwares for end users
+                              <td style="width:40%;padding:3px 0 20px 12px;border:0;font-size:13px;color:grey;font-style:italic;">
+                                <i class="fas fa-arrow-right"style="margin-right:2px;"></i>Experience of developing real-time softwares for end users
                               </td>
                               <td style="width:50%;padding:3px 0 12px 12px;border:none;"></td>
                             </tr>
