--- a/main/instructor-quizzes.html
+++ b/main/instructor-quizzes.html
@@ -284,7 +284,7 @@
                                   <span class="overlay__content"></span>
                               </a>
                               <div class="flex">
-                                  <a class="card-title" href="instructor-edit-quiz.html">Reading and writing into file</a>
+                                  <a class="card-title" href="instructor-quiz-all-students.html">Reading and writing into file</a>
                                   <div style="padding:10px 0;">
                                     <div style="float:left;"class="card-subtitle text-50">22 submissions</div>
                                     <span style="float:right"class="text-50 text-headings text-uppercase">Due: <span style="color:black;">June 22</span></span>
@@ -323,7 +323,7 @@
                                     <span class="overlay__content"></span>
                                 </a>
                                 <div class="flex">
-                                    <a class="card-title" href="instructor-edit-quiz.html">Important organic reations</a>
+                                    <a class="card-title" href="instructor-quiz-all-students.html">Important organic reations</a>
                                     <div style="padding:10px 0;">
                                       <div style="float:left;"class="card-subtitle text-50">5 submissions</div>
                                       <span style="float:right"class="text-50 text-headings text-uppercase">Due: <span style="color:black;">June 13</span></span>
@@ -362,7 +362,7 @@
                                     <span class="overlay__content"></span>
                                 </a>
                                 <div class="flex">
-                                    <a class="card-title" href="instructor-edit-quiz.html">Schrodinger wave equation and applications</a>
+                                    <a class="card-title" href="instructor-quiz-all-students.html">Schrodinger wave equation and applications</a>
                                     <div style="padding:10px 0;">
                                       <div style="float:left;"class="card-subtitle text-50">14 submissions</div>
                                       <span style="float:right"class="text-50 text-headings text-uppercase">Due: <span style="color:black;">June 01</span></span>
@@ -401,7 +401,7 @@
                                     <span class="overlay__content"></span>
                                 </a>
                                 <div class="flex">
-                                    <a class="card-title" href="instructor-edit-quiz.html">Introduction to Planes and 3d bodies</a>
+                                    <a class="card-title" href="instructor-quiz-all-students.html">Introduction to Planes and 3d bodies</a>
                                     <div style="padding:10px 0;">
                                       <div style="float:left;"class="card-subtitle text-50">10 submissions</div>
                                       <span style="float:right"class="text-50 text-headings text-uppercase">Due: <span style="color:black;">May 29</span></span>
@@ -499,12 +499,12 @@
 
                         <div class="list-group-item d-flex flex-column flex-sm-row align-items-sm-center px-12pt">
                             <div class="flex d-flex align-items-center mr-sm-16pt mb-8pt mb-sm-0">
-                                <a href="instructor-edit-quiz.html" class="avatar overlay overlay--primary avatar-4by3 mr-12pt">
+                                <a href="instructor-quiz-all-students.html" class="avatar overlay overlay--primary avatar-4by3 mr-12pt">
                                     <img src="assets\images\paths\cryptography.jpg"width="200px"height="168px" alt="Newsletter Design" class="avatar-img rounded">
                                     <span class="overlay__content"></span>
                                 </a>
                                 <div class="flex">
-                                    <a class="card-title mb-4pt" href="instructor-edit-quiz.html">Authentication and Security levels</a>
+                                    <a class="card-title mb-4pt" href="instructor-quiz-all-students.html">Authentication and Security levels</a>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center">
@@ -528,12 +528,12 @@
 
                         <div class="list-group-item d-flex flex-column flex-sm-row align-items-sm-center px-12pt">
                             <div class="flex d-flex align-items-center mr-sm-16pt mb-8pt mb-sm-0">
-                                <a href="instructor-edit-quiz.html" class="avatar overlay overlay--primary avatar-4by3 mr-12pt">
+                                <a href="instructor-quiz-all-students.html" class="avatar overlay overlay--primary avatar-4by3 mr-12pt">
                                     <img src="assets\images\paths\database.jpg"width="200px"height="168px"  alt="Adobe XD" class="avatar-img rounded">
                                     <span class="overlay__content"></span>
                                 </a>
                                 <div class="flex">
-                                    <a class="card-title mb-4pt" href="instructor-edit-quiz.html">Designing an ER diagram</a>
+                                    <a class="card-title mb-4pt" href="instructor-quiz-all-students.html">Designing an ER diagram</a>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center">
@@ -586,12 +586,12 @@
 
                         <div class="list-group-item d-flex flex-column flex-sm-row align-items-sm-center px-12pt">
                             <div class="flex d-flex align-items-center mr-sm-16pt mb-8pt mb-sm-0">
-                                <a href="instructor-edit-quiz.html" class="avatar overlay overlay--primary avatar-4by3 mr-12pt">
+                                <a href="instructor-quiz-all-students.html" class="avatar overlay overlay--primary avatar-4by3 mr-12pt">
                                     <img src="assets\images\paths\electrical.jpg"width="200px"height="168px"  alt="Craft by inVision" class="avatar-img rounded">
                                     <span class="overlay__content"></span>
                                 </a>
                                 <div class="flex">
-                                    <a class="card-title mb-4pt" href="instructor-edit-quiz.html">Designing a flip-flop circuit</a>
+                                    <a class="card-title mb-4pt" href="instructor-quiz-all-students.html">Designing a flip-flop circuit</a>
                                 </div>
                             </div>
                             <div class="d-flex align-items-center">
